# zephyr

./: .gitmodules  README.md
boards/arm/nrf51_polyu/: Kconfig.board  Kconfig.defconfig  board.h  nrf51_polyu.yaml  nrf51_polyu_defconfig
boards/arm/nrf51_polyu/doc/: nrf51_polyu.rst
boards/arm/stm32f4_explo/: Kconfig.board  Kconfig.defconfig  Makefile  board.h  pinmux.c  stm32f4_explo.dts  stm32f4_explo.yaml  stm32f4_explo_defconfig
boards/arm/stm32f4_explo/support/: openocd.cfg
drivers/ethernet/: eth_stm32_hal.c
drivers/flash/: flash_stm32.c
dts/arm/: Makefile  nrf51_polyu.dts  stm32f4_explo.dts
dts/arm/st/: stm32f4-pinctrl.dtsi
ext/lib/crypto/mbedtls/: Kconfig
ext/lorawan/: CMakeLists.txt
ext/lorawan/board/: board.h
ext/lorawan/radio/sx1276/: sx1276.c  sx1276.h
ext/lorawan/system/: delay.c  timer.c  timer.h
include/: json.h
samples/bluetooth/peripheral_uart/: README.rst
samples/bluetooth/peripheral_uart/src/: Makefile  ble_dfu.c  ble_dfu.h  ble_uart.c  ble_uart.h  main.c
samples/net/vrbox/: CMakeLists.txt  Makefile  net_app_buff.c  prj_stm32f4_explo.conf  sign.sh
samples/net/vrbox/doc/: box_develop_manual.docx  box_factory_test_manual.docx  box_pin_define_manual.docx  factory_test_manual.docx
samples/net/vrbox/src/: Makefile  axle.c  axle.h  config.h  controller.c  controller.h  dfu_http.c  dfu_http.h  door.c  door.h  gpio_comm.c  gpio_comm.h  headset.c  headset.h  infrared.c  infrared.h  json.c  json.h  libc_ext.c  libc_ext.h  log_hook.c  log_hook.h  main.c  mqtt.c  mqtt.h  net_app_buff.h  parson.c  parson.h  rfid.c  rfid.h  service.c  service.h  version.h  vrbox_mqtt.c  vrbox_mqtt.h
subsys/lorawan/: CMakeLists.txt  Kconfig
subsys/lorawan/class/: Kconfig
subsys/lorawan/radio/: Kconfig.sx1272  Kconfig.sx1276  sx1276.c
